--- a/arch/arm64/configs/cyanogenmod_kipper-64_defconfig
+++ b/arch/arm64/configs/cyanogenmod_kipper-64_defconfig
@@ -280,6 +280,7 @@ CONFIG_SLIP=y
 CONFIG_SLIP_COMPRESSED=y
 CONFIG_SLIP_MODE_SLIP6=y
 CONFIG_USB_USBNET=y
+CONFIG_USB_NET_DM9601=y
 CONFIG_WCNSS_CORE=y
 CONFIG_WCNSS_CORE_PRONTO=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
